--- a/index.html
+++ b/index.html
@@ -58,13 +58,16 @@
               <span class="author-block">
                 <a target="_blank">Pascal Klöckner</a>,</span>
                 <span class="author-block">
-                <a target="_blank">Pascal Klöckner</a>,</span>
+                <a target="_blank">José Teixeira</a>,</span>
                 <span class="author-block">
-                <a target="_blank">Pascal Klöckner</a>,</span>
+                <a target="_blank">Diana Montezuma</a>,</span>
                 <span class="author-block">
-                <a target="_blank">Pascal Klöckner</a>,</span>
+                <a target="_blank">Jaime S. Cardoso</a>,</span>
                 <span class="author-block">
-                <a target="_blank">Pascal Klöckner</a>,</span>
+                <a target="_blank">Hugo M. Horlings</a>,</span>
+                  </div>
+                <span class="author-block">
+                <a target="_blank">Sara P. Oliveira</a>,</span>
                   </div>
 
                   <div class="column has-text-centered">
@@ -145,7 +148,7 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{klöckner2025gansvsdiffusionmodels,
+      <pre><code>@misc{klöckner2025HER2match,
       title={GANs vs. Diffusion Models for virtual staining with the HER2match dataset}, 
       author={Pascal Klöckner and José Teixeira and Diana Montezuma and Jaime S. Cardoso and Hugo M. Horlings and Sara P. Oliveira},
       year={2025},
