--- a/index.html
+++ b/index.html
@@ -115,17 +115,14 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/img1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
+      <div class="image-container has-text-centered">
+        <img src="static/images/img1.jpg" alt="MY ALT TEXT" />
+        <h2 class="subtitle">
           Example image pair.
         </h2>
       </div>
+    </div>
   </div>
-</div>
-</div>
 </section>
 <!-- End image carousel -->
 
