--- a/index.html
+++ b/index.html
@@ -114,16 +114,17 @@
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
-      <div class="image-container has-text-centered">
-        <img src="static/images/img1.jpg" alt="MY ALT TEXT" />
-        <h2 class="subtitle">
-          Example image pair.
-        </h2>
-      </div>
+    <div class="container has-text-centered">
+      <figure class="image is-inline-block">
+        <img src="static/images/img1.jpg" alt="MY ALT TEXT">
+      </figure>
+      <h2 class="subtitle">
+        Example image pair.
+      </h2>
     </div>
   </div>
 </section>
+
 <!-- End image carousel -->
 
 <!-- Paper poster -->
