--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
                 <a target="_blank">Jaime S. Cardoso</a>,</span>
                 <span class="author-block">
                 <a target="_blank">Hugo M. Horlings</a>,</span>
-                  </div>
                 <span class="author-block">
                 <a target="_blank">Sara P. Oliveira</a>,</span>
                   </div>
-
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
@@ -101,7 +99,7 @@
         <h2 class="title is-3"></h2>
           <div class="content has-text-justified">
             <p>
-              <a href="https://arxiv.org/abs/2506.18484" target="_blank">Sign up here</a> to be updated once the HER2match dataset is made available.
+            <a href="https://arxiv.org/abs/2506.18484" target="_blank"><strong>Sign up here</strong></a> to be updated once the HER2match dataset is made available.
             </p>
           </div>
       </div>
