--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <span class="author-block">
                 <a target="_blank">Hugo M. Horlings</a>,</span>
                 <span class="author-block">
-                <a target="_blank">Sara P. Oliveira</a>,</span>
+                <a target="_blank">Sara P. Oliveira</a></span>
                   </div>
                   <div class="column has-text-centered">
                     <div class="publication-links">
@@ -99,7 +99,7 @@
         <h2 class="title is-3"></h2>
           <div class="content has-text-justified">
             <p>
-            <a href="https://arxiv.org/abs/2506.18484" target="_blank"><strong>Sign up here</strong></a> to be updated once the HER2match dataset is made available.
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfsXczt3Sa4e2_GJIzz-o6tqWHJHfU3aJf-AhJ7kyEDstOPRg/viewform?usp=dialog" target="_blank"><strong>Sign up here</strong></a> to be updated once the HER2match dataset is made available.
             </p>
           </div>
       </div>
